Fix 'add code comment' button being invisible all the time (#13389)
* Fix 'add code comment' button being invisible all the time

* Fix off-center icon

* Remove old JS hover hack

* Show on full-line hover


(cherry picked from commit 7f7e7f3ca432fa80f9f5a8a71c9c10a89ac43c4f)

--- a/web_src/less/_review.less
+++ b/web_src/less/_review.less
@@ -1,7 +1,7 @@
 .ui.button.add-code-comment {
   font-size: 14px;
   height: 16px;
-  line-height: 16px !important;
+  line-height: 12px !important;
   padding: 0;
   position: relative;
   width: 16px;
@@ -17,6 +17,10 @@
   }
 }
 
+.diff-file-box .lines-code:hover .ui.button.add-code-comment {
+  opacity: 1;
+}
+
 .add-comment-left.add-comment-right .ui.attached.header {
   border: 1px solid #d4d4d5;
   margin-top: .5em;
@@ -30,11 +34,6 @@
     display: block;
     margin-left: auto;
   }
-}
-
-.focus-lines-new .ui.button.add-code-comment.add-code-comment-right,
-.focus-lines-old .ui.button.add-code-comment.add-code-comment-left {
-  opacity: 1;
 }
 
 .comment-code-cloud {
